# felvidek-ru

./: README.md  pyproject.toml  translate.py
.github/workflows/: release.yml
src_game/www/data/: Actors.json  Animations.json  Armors.json  Classes.json  CommonEvents.json  Doodads.json  Enemies.json  English.json  Items.json  Map001.json  Map002.json  Map003.json  Map004.json  Map005.json  Map006.json  Map007.json  Map008.json  Map009.json  Map010.json  Map011.json  Map012.json  Map013.json  Map014.json  Map015.json  Map016.json  Map017.json  Map018.json  Map019.json  Map020.json  Map021.json  Map022.json  Map023.json  Map024.json  Map025.json  Map026.json  Map027.json  Map028.json  Map029.json  Map030.json  Map031.json  (+59 more)
