[tool.poetry]
name = "felvidek-ru"
version = "0.1.0"
description = ""
authors = ["Ilya Chistyakov <ilchistyakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
translatepy = "^2.3"
google-api-python-client = "^2.77.0"
google-auth = "^2.16.0"
google-auth-httplib2 = "^0.1.0"
fonttools = "^4.38.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
